# EthicalAI

./: .coverage  .coverage.Testbed.24296.XcfDpupx  .coverage.Testbed.4652.XBXSxSjx  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CORRECTED_TECHNICAL_ROADMAP.md  LICENSE  Makefile  README.md  TECHNICAL_ROADMAP.md  TESTING_GUIDE.md  __init__.py  check_env.py  check_imports.py  comprehensive_output.txt  comprehensive_project_test.py  comprehensive_project_test_expanded.py  comprehensive_test.py  constraints.txt  debug_routes.py  diagnose.py  download_model.py  fastapi_test.py  minimal_fastapi_test.py  minimal_test.py  mypy.ini  pyproject.toml  pytest.ini  requirements-windows.txt  requirements.txt  ruff.toml  run_comprehensive_tests.py  run_test.py  run_tests.bat  run_tests.ps1  run_tests_direct.bat  setup_and_test.ps1  setup_env.ps1  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md
api/: __init__.py  main.py  routes.py
artifacts/: active.json  frames.sqlite
configs/: app.yaml  local.yaml  logging.yaml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  ETHICS.md  Models.md  ROADMAP.md  openapi.json  postman_collection.json  thunder-collection_Coherence_API.json
scripts/: calibrate_axes.py  dev_run.sh  dump_baseline_pipeline.py  export_openapi.py  fix_common_md_issues.py  fix_markdown.py  fix_markdown_blanks.py  fix_md_lint.py  fix_md_lint_issues.py  fix_readme.py  fix_readme_format.py  openapi_to_postman.py  openapi_to_thunder.py  seed_axes.py
tests/: conftest.py  test_advanced_axis_integration.py  test_api.py  test_api_endpoints.py  test_app_imports.py  (+29 more)
(+221 files in other folders)
